<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_view"
    android:background="@color/red">

    <!--定义一个TextView居中作为标题-->
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/tb_title"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        />

    <!--搜索框-->
    <EditText
        android:id="@+id/tb_Search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:hint="@string/tex_search"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:visibility="gone"
        android:layout_centerVertical="true"
        />

    <!--编辑按钮-->
    <Button
        android:id="@+id/tb_right_button"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:paddingRight="20dp"
        android:textSize="15sp"
        android:gravity="center_vertical|right"
        android:textColor="@color/white"
        android:text="@string/but_ited"
        android:background="?attr/colorPrimary"
        android:visibility="gone"
        />

    <!--右边图片按钮-->
    <ImageButton
        android:id="@+id/tb_right_imagebutton"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:gravity="center_vertical|right"
        android:textColor="@color/white"
        android:background="?attr/colorPrimary"
        android:src="@drawable/icon_grid_32"
        android:paddingRight="10dp"
        android:visibility="gone"
        />

    <!--左边图片按钮-->
    <ImageButton
        android:id="@+id/tb_left_ImageButton"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:background="?attr/colorPrimary"
        android:layout_centerVertical="true"
        android:src="@drawable/icon_back_32px"
        android:visibility="gone"
        />

    <!--下面两个控件为头像框和用户名-->
    <ImageView
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/tb_user_photo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tb_user_name"
        android:layout_centerHorizontal="false"
        android:layout_below="@+id/tb_user_photo"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tex_login"
        android:visibility="gone"
        android:paddingBottom="10dp"/>

</RelativeLayout>